rust/graph/tests/snapshots/projections__code-python-r-dataframe-provenance__flow-low.snap
---
source: rust/graph/tests/projections.rs
expression: to_dot(&view)
---
digraph stencila_graph {
  graph [rankdir="LR", overlap="false", splines="true"];
  graph [fontname="Arial", fontsize="11", style="solid"];
  node [fontname="Arial", fontsize="10", margin="0.08,0.05"];
  edge [fontname="Arial", fontsize="9", arrowsize="0.7"];
  graph [preset="flow"];
  graph [detail="low"];

  subgraph "cluster_dir:." {
    label="code-python-r-dataframe-provenance/"; color="#c3ccd699"; bgcolor="#c3ccd62c";
    subgraph "cluster_dir:data" {
      label="data/"; color="#c3ccd699"; bgcolor="#c3ccd62c";
      subgraph "cluster_dir:data/raw" {
        label="raw/"; color="#c3ccd699"; bgcolor="#c3ccd62c";
        "datatable:data/raw/observations.csv" [label="observations.csv", kind="datatable", shape="box", style="filled", fillcolor="#edf7ee", color="#3f7f48"];
      }
    }
    subgraph "cluster_dir:figures" {
      label="figures/"; color="#c3ccd699"; bgcolor="#c3ccd62c";
      "image:figures/python-counts.png" [label="python-counts.png", kind="content", shape="box", style="filled", fillcolor="#f7f4ea", color="#8a6f2a"];
      "image:figures/r-counts.png" [label="r-counts.png", kind="content", shape="box", style="filled", fillcolor="#f7f4ea", color="#8a6f2a"];
    }
    subgraph "cluster_dir:outputs" {
      label="outputs/"; color="#c3ccd699"; bgcolor="#c3ccd62c";
      "datatable:outputs/python-clean.csv" [label="python-clean.csv", kind="datatable", shape="box", style="filled", fillcolor="#edf7ee", color="#3f7f48"];
      "datatable:outputs/r-summary.csv" [label="r-summary.csv", kind="datatable", shape="box", style="filled", fillcolor="#edf7ee", color="#3f7f48"];
    }
    subgraph "cluster_dir:scripts" {
      label="scripts/"; color="#c3ccd699"; bgcolor="#c3ccd62c";
      "code:scripts/analysis.R" [label="analysis.R", kind="code", shape="box", style="filled", fillcolor="#eef6f4", color="#187b6b"];
      "code:scripts/analysis.py" [label="analysis.py", kind="code", shape="box", style="filled", fillcolor="#eef6f4", color="#187b6b"];
    }
  }

  "code:scripts/analysis.R" -> "image:figures/r-counts.png" [label="Generated", kind="Generated", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "code:scripts/analysis.py" -> "image:figures/python-counts.png" [label="Generated", kind="Generated", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "datatable:data/raw/observations.csv" -> "code:scripts/analysis.R" [label="Read By", kind="ReadBy", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "datatable:data/raw/observations.csv" -> "code:scripts/analysis.py" [label="Read By", kind="ReadBy", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "code:scripts/analysis.R" -> "datatable:outputs/r-summary.csv" [label="Written To", kind="WrittenTo", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "code:scripts/analysis.py" -> "datatable:outputs/python-clean.csv" [label="Written To", kind="WrittenTo", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
}
